[package]
name = "bubble_server"
version = "0.1.0"
edition="2018"
authors = ["Jessebadry <jessebadry@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version =  "0.4.8", features = ["std", "serde"] }
dashmap = "3.11.4"
num = "0.2.1"